# python_examples

./: .gitignore  PYENV.md  README.md  TODO.md  UPGRADING.md  justfile
00_cheatsheet/: README.md
01_simple_cli_cookiecutter/: README.md  cookiecutter.json
01_simple_cli_cookiecutter_uv/: README.md
01_simple_cli_cookiecutter_uv/{{cookiecutter.project_name}}/: Dockerfile.uv  README.md  justfile  pyproject.toml
01_simple_cli_copier_uv/: COPIER.md  copier.yml
01_simple_cli_skeleton/: Pipfile  README.md  main.py
02_game_of_life_package/: Pipfile  README.md  board.py  setup.py
03_curses_render/: Pipfile  README.md  main.py
04_requests/: Pipfile  README.md  docker-compose.yaml  main.py  post.py  simple.py  timeout.py
05_dockerise/: Pipfile  README.md  main.py  v3.11.3.Dockerfile
06_simple_flask_openapi/: Pipfile  README.md  main.py
07_aws_boto/: .env.template  .gitignore  Pipfile  README.md  docker-compose.mitmproxy.yaml  main.py
07_faker/: Pipfile  README.md  main.py  schedules.py
08_kafka/: .env.template  .gitignore  Pipfile  README.md  consumer.py  kafkaconfig.py  main.py  publisher.py  topic.py
09_monitor_sites/: .env.template  Pipfile  README.md  docker-compose.yaml  endpoint.py  interval.py  main.py  monitor.json  monitor.py  podinfo_monitor.json  response.py
11_gstreamer/: .gitignore  Pipfile  README.md  flake.nix  justfile  logging_config.yaml  main.py
13_geoip/: .env.template  .gitignore  Pipfile  README.md  logging_config.yaml  main.py
14_mongo/: .env.template  .gitignore  Pipfile  README.md  docker-compose.yaml  load_batch_jobs.py  main.py
15_schedules/: .env.template  .gitignore  Pipfile  README.md  main.py
16_document_similarity/: Pipfile  README.md  main.py  process_documents.py  similarity.py
17_elasticsearch/: Pipfile  README.md  elastic.env  main.py
18_cookiecutter/: .gitignore  README.md
19_tarball/: Pipfile  README.md  main.py
20_poetry/: README.md
21_distroless_python/: README.md
22_nix/: README.md
23_codeartifact/: README.md
23_pytest_docker/: Pipfile  README.md
24_lambda_container_python/: README.md
25_package_dependency_management/: README.md
25_package_dependency_management/torch_test_package/: .gitignore  PACKAGE_README.md  Pipfile  README.md  justfile  pyproject.toml
25_package_dependency_management/torch_test_package/src/torch_test_package/: checks.py  main.py
25_package_dependency_management/torch_test_package/tests/: test_main.py
26_pytest_docker/: Pipfile  README.md
27_fastapi/: .dockerignore  Pipfile  README.md  main.py  v3.11.9.Dockerfile
27_poisson_queuing/: Pipfile  README.md  bursty.py  main.py  queuing.py
28_package_audit/: Pipfile  README.md  flake.nix  justfile
29_pydantic/: Pipfile  README.md  fruit.py  main.py  meeting.py
30_testcontainers/: GENERATED_README.md  Pipfile  README.md  main.py
31_pytest/: .gitignore  Dockerfile  GENERATED_README.md  Pipfile  README.md  bubblesort.py  directory_trie.py  main.py  setup.cfg
32_pdoc/: Pipfile  (+2 more)
(+274 files in other folders)
